rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_last_segment_preserves_pre_comment.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  point(at = [var 1, var 2])
  // describe the trailing point
}

