rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_line_cascades_to_fixed_constraint.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  line2 = line(start = [var 5, var 6], end = [var 7, var 8])
}

