rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_lines_removes_multiline_equal_length_constraint_below_minimum.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  line1 = line(start = [var 1, var 2], end = [var 3, var 4])
}

