rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_multiple_points.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  point(at = [var 5, var 6])
}

