rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_point_cascades_to_horizontal_distance_constraint.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  point1 = point(at = [var 1, var 2])
}

