rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_point_with_var.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  point(at = [var 1, var 2])
  point(at = [var 5, var 6])
}

