rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_segments_preserves_block_comments_across_positions.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  /* above first - moves to middle */
  /* above middle - stays */
  point(at = [var 3, var 4])
  /* above last - moves to trailing meta */
}

