rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_diameter_single_arc_segment.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  arc1 = arc(
    start = [
      var 1.8160908698974167,
      var 3.632309197508986
    ],
    end = [
      var 2.4584857364772392,
      var 3.2773097173284147
    ],
    center = [
      var -0.2745767416966495,
      var -0.909618690275183
    ],
  )
  diameter(arc1) == 10mm
}
